kubernetes/mahasiswa-app/02-postgres-db-main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db-main
  namespace: mahasiswa-app
  labels:
    app: postgres-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-main
  template:
    metadata:
      labels:
        app: postgres-main
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-main-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-main-storage
        persistentVolumeClaim:
          claimName: postgres-main-pvc 
---
