kubernetes/mahasiswa-app/04-postgres-db-log-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db-log
  namespace: mahasiswa-app
  labels:
    app: postgres-log 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-log
  template:
    metadata:
      labels:
        app: postgres-log 
    spec:
      containers:
      - name: postgres-log-container 
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-log-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-log-storage 
        persistentVolumeClaim:
          claimName: postgres-log-pvc 
---
