kubernetes/mahasiswa-app/08b-rest-api-deployment-helm.yaml
# kubernetes/08b-rest-api-deployment-helm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-mahasiswa-helm 
  namespace: mahasiswa-app
  labels:
    app: rest-api 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rest-api 
  template:
    metadata:
      labels:
        app: rest-api 
    spec:
      containers:
      - name: rest-api-container
        image: pppercivalll/rest-api-mahasiswa:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000 
        livenessProbe:
          httpGet:
            path: / 
            port: 3000 
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
