kubernetes/mahasiswa-app/10-consumer-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-service
  namespace: mahasiswa-app
  labels:
    app: consumer-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consumer-service
  template:
    metadata:
      labels:
        app: consumer-service
    spec:
      containers:
      - name: consumer-service-container
        image: pppercivalll/consumer-service
        imagePullPolicy: Always
