kubernetes/mahasiswa-app/11-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: mahasiswa-app
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: sister534/frontend-last:latest    
        imagePullPolicy: IfNotPresent                 
        ports:
        - containerPort: 80
