kubernetes/mahasiswa-app/05-postgres-db-log-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-log-service 
  namespace: mahasiswa-app
spec:
  selector:
    app: postgres-log 
  ports:
  - protocol: TCP
    port: 5432 
    targetPort: 5432 
  type: ClusterIP
