kubernetes/mahasiswa-app/07-kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: mahasiswa-app
spec:
  selector:
    app: kafka
  ports:
  - name: plaintext
    port: 9092
    targetPort: 9092
  type: ClusterIP
