kubernetes/mahasiswa-app/09-rest-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-mahasiswa-service
  namespace: mahasiswa-app
spec:
  selector:
    app: rest-api
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 3000 
  type: LoadBalancer
