kubernetes/mahasiswa-app/10-consumer-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-metrics
  namespace: mahasiswa-app
  labels:
    app: consumer-service
spec:
  selector:
    app: consumer-service
  ports:
    - name: metrics
      port: 9400          
      targetPort: 9400
