kubernetes/mahasiswa-app/13-kafka-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: mahasiswa-app
spec:
  selector:
    app: kafka-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: mahasiswa-app
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
