kubernetes/mahasiswa-app/15-ingress-kafkaui-pgadmin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafkaui-pgadmin-ingress
  namespace: mahasiswa-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: kafkaui.osslab.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080

    - host: postgre.osslab.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
